<resources>
    <string name="app_name">ResourcED™ NYC</string>
    <string name="drawer_title">ResourcED™ NYC</string>
    <string name="drawer_subtitle">NYC\'s Premiere UPK and Daycare Locator</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="splash_screen_text">NYC\'s premier PreSchool and DayCare Locator</string>
    <string name="welcome_text">Welcome to ResourcED!  To get you better acquainted with the app, Let\'s show you around.</string>
    <string name="next_button">NEXT >>></string>
    <string name="instruction_text">To acquire your app settings, press the hamburger button at the top left until you see the image below</string>
    <string name="map_text">Once you have chosen the resource that you would like more information on, enter the address to find the location nearest you</string>
    <string name="card_text">You would then choose your desired resource</string>
    <string name="begin_text">You are now ready to use ResourcED!</string>
    <string name="home_tab">Home</string>
    <string name="profile_tab">Profile</string>
    <string name="favorites_tab">Favorites</string>
    <string name="daycare_text">DayCare </string>
    <string name="prek_text">Universal Pre-K </string>
    <string name="address_hint">Address....</string>
    <string name="radius_hint">Radius: </string>
    <string name="submit_button">SUBMIT</string>

    <integer-array name="radius_array">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
    </integer-array>
</resources>
