<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_first_fragment"
            android:icon="@drawable/home"
            android:title="@string/home_tab"
            android:checked="true"/>
        <item
            android:id="@+id/nav_second_fragment"
            android:icon="@drawable/profile"
            android:title="@string/profile_tab" />
        <item
            android:id="@+id/nav_three_fragment"
            android:icon="@drawable/favorites"
            android:title="@string/favorites_tab" />

        <item android:id="@+id/nav_switch"
            app:actionLayout="@layout/action_view_switch"
            android:title="Downloaded only" />
    <!--<item android:title="Sub items">-->
            <!--<menu>-->
                <!--<group android:checkableBehavior="single">-->
                    <!--<item-->
                        <!--android:icon="@drawable/ic_dashboard"-->
                        <!--android:title="Sub item 1" />-->
                    <!--<item-->
                        <!--android:icon="@drawable/ic_forum"-->
                        <!--android:title="Sub item 2" />-->
                <!--</group>-->
            <!--</menu>-->
        <!--</item>-->
    </group>
</menu>