<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#673AB7">

    <!-- A CardView that contains a TextView -->
    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        card_view:cardCornerRadius="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:id="@+id/map_view_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/map_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:paddingTop="0dp"
                android:text="@string/card_text"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="23dp"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="330dp"
                android:orientation="vertical">

                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/home_instruction_card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    android:background="@color/purpleColor"
                    card_view:cardCornerRadius="@dimen/activity_horizontal_margin">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:src="@drawable/daycare_png" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_weight="1"
                            android:paddingTop="20dp"
                            android:text="@string/daycare_text"
                            android:textAlignment="center"
                            android:textSize="30dp" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/home_instruction2_card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    android:background="@color/purpleColor"
                    card_view:cardCornerRadius="@dimen/activity_horizontal_margin">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:src="@drawable/prek_png" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_weight="1"
                            android:text="@string/prek_text"
                            android:textAlignment="center"
                            android:textSize="30dp" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/next_button3"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:layout_weight="1"
                    android:fontFamily="serif"
                    android:text="@string/next_button"
                    android:textColor="@color/black"
                    android:textSize="20dp" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</FrameLayout>